--- a/NumberConverter/Views/Conversion/ConversionConfigurationView.xaml
+++ b/NumberConverter/Views/Conversion/ConversionConfigurationView.xaml
@@ -23,12 +23,14 @@
         <Label Grid.Column="2" Grid.Row="0" FontSize="15" FontWeight="Bold" Margin="5 0" VerticalAlignment="Bottom">Roman Value</Label>
         <Button Name="ConvertBtn" Grid.Column="1" Grid.Row="1" Height="30" Margin="5 25" VerticalAlignment="Top" 
                 Content="Convert" Command="{Binding ConvertCommand}"/>
-        <TextBox Name="ArabicTextBox" Grid.Column="0" Grid.Row="1" FontSize="30" FontWeight="Bold"
+        <TextBox Name="ArabicTextBox" Grid.Column="0" Grid.Row="1" FontSize="30" FontWeight="Bold" TextWrapping="Wrap"
                  Height="150" VerticalAlignment="Top" Margin="5" VerticalScrollBarVisibility="Auto"
                  Text="{Binding UserInput, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"/>
-        <TextBox Name="RomanTextBox" Grid.Column="2" Grid.Row="1"  FontSize="30" FontWeight="Bold"
+        <TextBox Name="RomanTextBox" Grid.Column="2" Grid.Row="1"  FontSize="30" FontWeight="Bold" TextWrapping="Wrap"
                  Height="150" VerticalAlignment="Top" Margin="5" VerticalScrollBarVisibility="Auto" IsReadOnly="True"
                  Text="{Binding RomanValue, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}"/>
-        <TextBox IsReadOnly="true" TextWrapping="Wrap" Margin="5 0" Grid.Column="0" Background="Transparent" BorderThickness="0" Grid.Row="2" FontSize="10">Please, insert a number from range 0-5999. Other numbers will not be converted.</TextBox>
+        <TextBox IsReadOnly="true" TextWrapping="Wrap" Margin="5 0" Grid.Column="0" Background="Transparent" BorderThickness="0" Grid.Row="2" FontSize="10">
+            Please, insert a number from range 1-5999. Other numbers will not be converted.
+        </TextBox>
     </Grid>
 </UserControl>
